--- a/index.ipynb
+++ b/index.ipynb
@@ -217,7 +217,8 @@
    "outputs": [],
    "source": [
     "names_and_ranks = []\n",
-    "for i in city-Indices"
+    "for i in city_indices:\n",
+    "    names_and_ranks.append()"
    ]
   },
   {
