Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -210,22 +210,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-8-8e66e0b5030b>, line 3)",
+     "evalue": "invalid syntax (<ipython-input-9-09496b7f62f8>, line 3)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-8e66e0b5030b>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(i+'. 'city_names(i)\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-09496b7f62f8>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    names_and_ranks.append(i+'. 'city_names[i])\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append(i+'. 'city_names[i)"
+    "    names_and_ranks.append(i+'. 'city_names[i])"
    ]
   },
   {
