--- a/index.ipynb
+++ b/index.ipynb
@@ -216,32 +216,32 @@
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append((\"[i+1]. \",city_names[i]))"
+    "    names_and_ranks.append(([i+1]. ,city_names[i]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[([1], '. ', 'Buenos Aires'),\n",
-       " ([2], '. ', 'Toronto'),\n",
-       " ([3], '. ', 'Pyeongchang'),\n",
-       " ([4], '. ', 'Marakesh'),\n",
-       " ([5], '. ', 'Albuquerque'),\n",
-       " ([6], '. ', 'Los Cabos'),\n",
-       " ([7], '. ', 'Greenville'),\n",
-       " ([8], '. ', 'Archipelago Sea'),\n",
-       " ([9], '. ', 'Walla Walla Valley'),\n",
-       " ([10], '. ', 'Salina Island'),\n",
-       " ([11], '. ', 'Solta'),\n",
-       " ([12], '. ', 'Iguazu Falls')]"
+       "[('[i+1]. ', 'Buenos Aires'),\n",
+       " ('[i+1]. ', 'Toronto'),\n",
+       " ('[i+1]. ', 'Pyeongchang'),\n",
+       " ('[i+1]. ', 'Marakesh'),\n",
+       " ('[i+1]. ', 'Albuquerque'),\n",
+       " ('[i+1]. ', 'Los Cabos'),\n",
+       " ('[i+1]. ', 'Greenville'),\n",
+       " ('[i+1]. ', 'Archipelago Sea'),\n",
+       " ('[i+1]. ', 'Walla Walla Valley'),\n",
+       " ('[i+1]. ', 'Salina Island'),\n",
+       " ('[i+1]. ', 'Solta'),\n",
+       " ('[i+1]. ', 'Iguazu Falls')]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
