--- a/index.ipynb
+++ b/index.ipynb
@@ -216,7 +216,7 @@
    "source": [
     "names_and_ranks = []\n",
     "for i in city_indices:\n",
-    "    names_and_ranks.append(''([(i+1)], city_names[i]))"
+    "    names_and_ranks.append(([(i+1)], city_names[i]))"
    ]
   },
   {
