--- a/index.ipynb
+++ b/index.ipynb
@@ -267,7 +267,9 @@
    },
    "outputs": [],
    "source": [
-    "city_populations = []"
+    "city_populations = []\n",
+    "for city in cities:\n",
+    "    city_"
    ]
   },
   {
