Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -261,15 +261,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 45,
+   "metadata": {},
    "outputs": [],
    "source": [
     "city_populations = []\n",
     "for city in cities:\n",
-    "    city_"
+    "    city_populations.append(city)"
    ]
   },
   {
