--- a/index.ipynb
+++ b/index.ipynb
@@ -409,23 +409,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "city_areas = []\n",
     "for city in cities:\n",
-    "    city_a"
+    "    city_areas.append(city['Area'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 53,
+   "metadata": {},
    "outputs": [],
    "source": [
     "trace_areas = {'x': names_and_ranks, 'y': city_areas, 'text': names_and_ranks, 'type': 'bar', 'name': 'areas'}"
